--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-sitemap": "node generate-sitemap.js"
+    "generate-sitemap": "node generate-sitemap.js",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "preview": "npm run pages:build && wrangler pages dev",
+    "deploy": "npm run pages:build && wrangler pages deploy"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -40,9 +43,11 @@
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.15",
     "@next/bundle-analyzer": "15.2.3",
     "@types/react": "19.1.5",
     "@types/react-dom": "^19.1.9",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "pnpm": "^10.15.1"
   }
 }
