--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "generate-sitemap": "node generate-sitemap.js",
     "pages:build": "npx @cloudflare/next-on-pages",
     "preview": "npm run pages:build && wrangler pages dev",
-    "deploy": "npm run pages:build && wrangler pages deploy"
+    "deploy": "npm run build && gh-pages -d .next"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -48,6 +48,7 @@
     "@types/react": "19.1.5",
     "@types/react-dom": "^19.1.9",
     "cross-env": "^7.0.3",
+    "gh-pages": "^6.3.0",
     "pnpm": "^10.15.1"
   }
 }
